<resources>
    <string name="app_name">Hydration Reminder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_history">Histórico</string>
    <string name="label_settings">Configurações</string>
    <string name="label_hidrate">Hidrate-se</string>
    <string name="label_weight">Peso(kg)</string>
    <string name="label_time_start">Hora que Acorda</string>
    <string name="label_time_ends">Hora de Dorme</string>
    <string name="label_save">Salvar</string>
    <string name="label_quantity_drink">Quantidade de Bebida(ml)</string>
    <string name="label_progress">Keep Calm e Hidrate-se</string>
    <string name="notification_channel_description">Hidrate - Relembre quando beber água</string>
    <string name="notification_title">Bora se Hidratar?</string>
    <string name="notification_content">Hora de beber água. Hidrate-se</string>
    <string name="warning_weight">Informe o Peso</string>
    <string name="warning_begin_time">Informe a Data que você acorda</string>
    <string name="warning_end_time">Informe a Data que você Dorme</string>
    <string name="warning_quantity_drink">Informe  a Quantidade de Bebida</string>
    <string name="babel_drunk">Bebidos:</string>
    <string name="label_goal">Meta:</string>
</resources>