<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_hidrate">

    <fragment
        android:id="@+id/navigation_hidrate"
        android:name="br.com.jose.hidratereminder.ui.hidrate.HidrateFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_hidrate" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="br.com.jose.hidratereminder.ui.history.HistoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="br.com.jose.hidratereminder.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />
</navigation>