<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    tools:context=".ui.hidrate.HidrateFragment">
    <TextView
        android:id="@+id/tv_hidrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:text="@string/label_hidrate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_label_drinks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/babel_drunk"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hidrate"
        app:layout_constraintVertical_bias="0.15" />
    <TextView
        android:id="@+id/tv_drunks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_drinks"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_label_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_goal"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_drunks"
        />
    <TextView
        android:id="@+id/tv_total_drinks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="50sp"
        tools:layout_editor_absoluteY="67dp"
        tools:text="3000ml"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       />

    <Button
        android:id="@+id/btn_drink"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/round_button"
        android:drawableTop="@drawable/ic_drink_big"
        android:drawableTint="@color/white"
        android:layout_marginTop="16dp"
        android:elevation="32dp"
        android:gravity="center_horizontal|top"
        android:paddingTop="48dp"
        android:paddingBottom="32dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_drinks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="300ml" />

</androidx.constraintlayout.widget.ConstraintLayout>